--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,16 @@ php:
   - 5.5
   - 5.6
 
+env:
+  - PATH=$PATH:.node_modules/bin
+
 before_script:
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - composer install
+  - npm install
 
 script:
+  - gulp build
   - php app/console doctrine:schema:update --force
   - php app/console jailbreaks:migrate
   - phpunit -c app/
