--- a/.drone.yml
+++ b/.drone.yml
@@ -4,10 +4,11 @@ workspace:
 
 pipeline:
   build:
-    image: golang:1.9
+    image: golang:1.11
     commands:
+    - export GO111MODULE=on
     - go build -o jailbreak-generate .
-    - ./jailbreak-generate -i ./jailbreaks.json -o ./static
+    - ./jailbreak-generate -i ./jailbreaks.yml -o ./static
     - cd static
     - tar czf ../canijailbreak.com.tar.gz *
 
