--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -3,10 +3,20 @@ jailbreaks:
   name: ""
   url: ""
   firmwares:
-    start: 12
+    start: 12.1.3
     end: 12.1.4
   platforms: []
   caveats: ""
+  
+  - jailbroken: true
+  name: RootlessJB
+  url: https://jailbreaks.fun/
+  firmwares:
+    start: 12.0
+    end: 12.1.2
+  platforms:
+  - iOS
+  caveats: "Currently there is no cydia support, need an apple shortcut to install .deb files with a link"
 
 - jailbroken: true
   name: unc0ver
