--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -10,7 +10,7 @@ jailbreaks:
 
 - jailbroken: true
   name: unc0ver
-  url: https://www.idownloadblog.com/2018/10/14/how-to-jailbreak-ios-11-0-11-4-beta-3-with-unc0ver/
+  url: https://github.com/pwn20wndstuff/Undecimus
   firmwares:
     start: 11.0
     end: 11.4.1
@@ -18,7 +18,7 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: ""
+  caveats: "Follow the Cydia Impactor method of installing the Jailbreak"
 
 - jailbroken: true
   name: Meridian
