--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -18,8 +18,8 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: Beta public release, proceed with caution. Currently A12 devices like iPhone XR,
-  XS and XS Max are not yet supported, please wait for an update.
+  caveats: Currently A12 devices like iPhone XR, XS and XS Max are not yet
+  supported, please wait for an update.
   
 - jailbroken: true
   name: unc0ver
