--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -3,11 +3,25 @@ jailbreaks:
   name: ""
   url: ""
   firmwares:
-    start: 12
+    start: 12.1.3
     end: 12.1.4
   platforms: []
   caveats: ""
 
+- jailbroken: true
+  name: unc0ver
+  url: https://www.redmondpie.com/jailbreak-ios-12-12.1.2-12.1.2-beta-3-with-unc0ver-and-install-cydia-heres-how-tutorial/
+  firmwares:
+    start: 12.0
+    end: 12.1.2
+  platforms:
+  - Windows
+  - macOS
+  - Linux
+  caveats: > 
+    A8X to A11 devices only. Currently A12 devices like iPhone XR, XS and
+    XS Max are not yet supported, please wait for an update.
+  
 - jailbroken: true
   name: unc0ver
   url: https://www.idownloadblog.com/2018/10/14/how-to-jailbreak-ios-11-0-11-4-beta-3-with-unc0ver/
