--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -3,11 +3,25 @@ jailbreaks:
   name: ""
   url: ""
   firmwares:
-    start: 12.1.3
+    start: 12.3
     end: 12.3.2
   platforms: []
   caveats: ""
 
+- jailbroken: true
+  name: Chimera
+  url: https://chimera.sh/
+  firmwares:
+    start: 12.1.3
+    end: 12.2
+  platforms:
+  - Windows
+  - macOS
+  - Linux
+  caveats: > 
+    Semi-Untethered Only. Follow the Cydia Impactor method of installing
+    the Jailbreak. A12 devices are not supported. Sileo installed by default (not Cydia).
+    
 - jailbroken: true
   name: Chimera
   url: https://chimera.sh/
