Unc0ver now supports A12 devices.

--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -19,7 +19,7 @@ jailbreaks:
   - Linux
   caveats: >    
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak. A12 devices are not supported.
+    the Jailbreak.
 
 - jailbroken: false
   name: ""
@@ -56,21 +56,21 @@ jailbreaks:
   - Linux
   caveats: > 
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak. Support for A12 (unlike unc0ver). Sileo installed by default (not Cydia).
+    the Jailbreak. Sileo installed by default (not Cydia).
   
 - jailbroken: true
   name: unc0ver
   url: https://www.redmondpie.com/jailbreak-ios-12-12.1.2-12.1.2-beta-3-with-unc0ver-and-install-cydia-heres-how-tutorial/
   firmwares:
     start: 12.0
-    end: 12.1.2
+    end: 12.2
   platforms:
   - Windows
   - macOS
   - Linux
   caveats: > 
-    Currently A12 devices like iPhone XR, XS and XS Max
-    are not supported. unc0ver includes Cydia by default.
+    Semi-Untethered Only. Follow the Cydia Impactor method of installing
+    the Jailbreak.
   
   
 - jailbroken: true
