--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -18,99 +18,73 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: >    
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak.
-
-- jailbroken: false
-  name: ""
-  url: ""
-  firmwares:
-    start: 12.3
-    end: 12.3.2
-  platforms: []
-  caveats: ""
 
 - jailbroken: true
   name: Chimera
   url: https://chimera.sh/
   firmwares:
-    start: 12.1.3
-    end: 12.2
+    start: 12.4
   platforms:
   - Windows
   - macOS
   - Linux
-  caveats: > 
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak. A12 devices are not supported. Sileo installed by default (not Cydia).
+    the Jailbreak. Sileo installed by default (not Cydia).
+
+- jailbroken: true
+  name: checkra1n
+  url: https://checkra.in/
+  firmwares:
+    start: 12.3
+    end: 12.3.2
+  platforms:
+  - MacOS
+  caveats: >
+    Semi-tethered Only. A12 devices are not supported.	
     
 - jailbroken: true
   name: Chimera
   url: https://chimera.sh/
   firmwares:
     start: 12.0
-    end: 12.1.2
-  platforms:
-  - Windows
-  - macOS
-  - Linux
-  caveats: > 
-    Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak. Sileo installed by default (not Cydia).
-  
-- jailbroken: true
-  name: unc0ver
-  url: https://www.redmondpie.com/jailbreak-ios-12-12.1.2-12.1.2-beta-3-with-unc0ver-and-install-cydia-heres-how-tutorial/
-  firmwares:
-    start: 12.0
     end: 12.2
   platforms:
   - Windows
   - macOS
   - Linux
-  caveats: > 
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak.
-  
-  
+    the Jailbreak. Sileo installed by default (not Cydia).
+   
 - jailbroken: true
   name: unc0ver
-  url: https://www.idownloadblog.com/2018/10/14/how-to-jailbreak-ios-11-0-11-4-beta-3-with-unc0ver/
+  url: https://github.com/pwn20wndstuff/Undecimus/releases
   firmwares:
     start: 11.0
-    end: 11.4.1
+    end: 12.2
   platforms:
   - Windows
   - macOS
   - Linux
-  caveats: ""
+  caveats: >
+    Semi-Untethered Only. Follow the Cydia Impactor method of installing
+    the Jailbreak.
 
 - jailbroken: true
-  name: Meridian
-  url: https://meridian.sparkes.zone/
+  name: totally-not-spyware
+  url: https://totally-not.spyware.lol/
   firmwares:
     start: 10.0
     end: 10.3.3
   platforms:
-  - Windows
-  - macOS
-  - Linux
-  caveats: Semi-Untethered Only. Follow the Cydia Impactor method of installing
-    the Jailbreak.
-
-- jailbroken: true
-  name: doubleH3lix
-  url: https://doubleh3lix.tihmstar.net
-  firmwares:
-    start: 10.0
-    end: 10.3.4
-  platforms:
-  - Windows
-  - macOS
-  - Linux
-  caveats: 64-bit devices with a headphone jack supported. Semi-untethered only. Follow
-    the Cydia Impactor method of installing the Jailbreak.
+  - iOS
+  caveats: 64-bit devices only. Visit totally-not.spyware.lol in Safari on the iOS device itself.
+   The user can choose between using Meridian or doubleH3lix to jailbreak. A10 users must use
+   Meridian.
 
 - jailbroken: true
   name: H3lix
@@ -146,21 +120,8 @@ jailbreaks:
     end: 9.3.4
   platforms:
   - iOS
-  caveats: 32-bit devices only. Visit jailbreak.me in Safari on the iOS device itself.
-
-- jailbroken: true
-  name: Home Depot
-  url: http://wall.supplies
-  firmwares:
-    start: 9.1
-    end: 9.3.4
-  platforms:
-  - Windows
-  - macOS
-  - Linux
-  caveats: 32-bit devices only. Semi-untethered, but can be untethered by installing
-    UntetherHomeDepot via tihmstar's Cydia repo. Follow the Cydia Impactor method
-    of installing the Jailbreak.
+  caveats: 32-bit devices only. Semi-untethered but can be untethered by installing
+  untetherhomedepot. Visit jailbreak.me in Safari on the iOS device itself to jailbreak.
 
 - jailbroken: true
   name: Pangu
@@ -191,12 +152,11 @@ jailbreaks:
   url: https://etasonjb.tihmstar.net/
   firmwares:
     start: 8.4.1
-    end: ""
   platforms:
   - Windows
   - macOS
   - Linux
-  caveats: 32-bit devices only. Follow the Cydia Impactor method of installing the
+  caveats: 32-bit devices only. Untethered. Follow the Cydia Impactor method of installing the
     Jailbreak.
 
 - jailbroken: true
@@ -287,121 +247,11 @@ jailbreaks:
   caveats: ""
 
 - jailbroken: true
-  name: redsn0w + absinthe2
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 5.1.1
-    end: ""
-  platforms:
-  - Windows
-  - macOS
-  caveats: ""
-
-- jailbroken: true
   name: redsn0w
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 5.1
-    end: ""
-  platforms:
-  - Windows
-  - macOS
-  caveats: Tethered jailbreak. Not available for iPhone 4S, iPad 2 and iPad 3. Update
-    to a later iOS version.
-
-- jailbroken: true
-  name: redsn0w + corona
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 5.0.1
-    end: ""
-  platforms:
-  - Windows
-  - macOS
-  caveats: ""
-
-- jailbroken: true
-  name: redsn0w + corona
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 5.0
-    end: ""
-  platforms:
-  - Windows
-  - macOS
-  caveats: iPhone 4S only. Tethered for other devices.
-
-- jailbroken: true
-  name: redsn0w
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 4.3.4
-    end: 4.3.5
-  platforms:
-  - Windows
-  - macOS
-  caveats: Tethered jailbreak. Update to a newer iOS.
-
-- jailbroken: true
-  name: redsn0w
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 4.3
-    end: 4.3.3
-  platforms:
-  - Windows
-  - macOS
-  caveats: ""
-
-- jailbroken: true
-  name: redsn0w
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 4.2.9
-    end: 4.2.10
-  platforms:
-  - Windows
-  - macOS
-  caveats: iPhone 4 (CDMA) only. Tethered jailbreak. Update to a newer iOS.
-
-- jailbroken: true
-  name: redsn0w
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 4.2.5
-    end: 4.2.8
-  platforms:
-  - Windows
-  - macOS
-  caveats: iPhone 4 (CDMA) only.
-
-- jailbroken: true
-  name: redsn0w + limera1n
-  url: https://ipsw.me/iPhoneDev
-  firmwares:
-    start: 3.2.2
-    end: 4.2.1
-  platforms:
-  - Windows
-  - macOS
-  caveats: ""
-
-- jailbroken: true
-  name: JailbreakMe (Star)
-  url: http://jailbreakme.com/star
-  firmwares:
-    start: 3.1.2
-    end: 3.2.1
-  platforms:
-  - iOS
-  caveats: Visit www.jailbreakme.com/star in Safari on the iOS device itself.
-
-- jailbroken: true
-  name: redsn0w + blackra1n
   url: https://ipsw.me/iPhoneDev
   firmwares:
     start: 3.0
-    end: 3.1.1
+    end: 6.0
   platforms:
   - Windows
   - macOS
