--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -18,7 +18,7 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: >    
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak.
 
@@ -41,10 +41,10 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: > 
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak. A12 devices are not supported. Sileo installed by default (not Cydia).
-    
+
 - jailbroken: true
   name: Chimera
   url: https://chimera.sh/
@@ -55,10 +55,10 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: > 
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak. Sileo installed by default (not Cydia).
-  
+
 - jailbroken: true
   name: unc0ver
   url: https://www.redmondpie.com/jailbreak-ios-12-12.1.2-12.1.2-beta-3-with-unc0ver-and-install-cydia-heres-how-tutorial/
@@ -69,11 +69,11 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: > 
+  caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak.
-  
-  
+
+
 - jailbroken: true
   name: unc0ver
   url: https://www.idownloadblog.com/2018/10/14/how-to-jailbreak-ios-11-0-11-4-beta-3-with-unc0ver/
@@ -96,7 +96,8 @@ jailbreaks:
   - Windows
   - macOS
   - Linux
-  caveats: Semi-Untethered Only. Follow the Cydia Impactor method of installing
+  caveats: >
+    Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak.
 
 - jailbroken: true
