--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -11,7 +11,7 @@ jailbreaks:
 
 - jailbroken: true
   name: unc0ver
-  url: https://github.com/pwn20wndstuff/Undecimus/releases
+  url: https://unc0ver.dev/
   firmwares:
     start: 12.4
   platforms:
@@ -52,9 +52,9 @@ jailbreaks:
 
 - jailbroken: true
   name: unc0ver
-  url: https://www.redmondpie.com/jailbreak-ios-12-12.1.2-12.1.2-beta-3-with-unc0ver-and-install-cydia-heres-how-tutorial/
+  url: https://unc0ver.dev/
   firmwares:
-    start: 12.0
+    start: 11.0
     end: 12.2
   platforms:
   - Windows
@@ -63,19 +63,6 @@ jailbreaks:
   caveats: >
     Semi-Untethered Only. Follow the Cydia Impactor method of installing
     the Jailbreak.
-
-
-- jailbroken: true
-  name: unc0ver
-  url: https://www.idownloadblog.com/2018/10/14/how-to-jailbreak-ios-11-0-11-4-beta-3-with-unc0ver/
-  firmwares:
-    start: 11.0
-    end: 11.4.1
-  platforms:
-  - Windows
-  - macOS
-  - Linux
-  caveats: ""
 
 - jailbroken: true
   name: Meridian
