--- a/jailbreaks.yml
+++ b/jailbreaks.yml
@@ -6,14 +6,14 @@ jailbreaks:
     start: 15.5
     end: 17.0.2
   platforms:
-  caveats: For A12 to A16 devices only.
+  caveats: For A12 to A17 and M1/M2 devices only.
 
 - jailbroken: false
   name:
   url:
   firmwares:
     start: 17.0
-    end: 17.0.2
+    end: 17.0.1
   platforms:
   caveats: A9(X) and A10(X) devices only.
 
